--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/imgs/logo.png" type="icone">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="assets/css/index.css">
-    <title>webSite</title>
+    <title>CipherLock</title>
 </head>
 <body>
     <header>
@@ -17,6 +18,8 @@
                 <li class="nav-item"><a href="#">About</a></li>
                 <li class="nav-item"><a href="#">Menu</a></li>
                 <li class="nav-item"><a href="#">Contact</a></li>
+                <li class="nav-item" id="nav__button-login"><a href="login.html">Login</a></li>
+                <li class="nav-item" id="nav__button-create"><a href="cadastro.html">Get Started</a></li>
                 <i class='bx bx-search'></i>
             </ul>
             <div class="menu">
@@ -29,13 +32,13 @@
     <main>
         <section class="home">
             <div class="home-text">
-                <h4 class="text-h4"></h4>
-                <h1 class="text-h1"></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod error veniam in voluptatem magni quisquam</p>
-                <a href="#" class="home-btn">Order yours</a>
+                <h4 class="text-h4">Menos Senhas, Mais Tranquilidade</h4>
+                <h1 class="text-h1">A Solução para uma Vida Digital Mais Simples</h1>
+                <p>O CipherLock é a solução definitiva para manter suas senhas seguras e sua vida digital mais simples.Adeus ao estresse de esquecer senhas ou preocupações com segurança. Mantenha o controle total das suas credenciais</p>
+                <a href="#" class="home-btn">Experimente Agora</a>
             </div>
             <div class="home-img">
-                <img src="" alt="">
+                <img src="assets/imgs/index/mandesk.svg" alt="mandesk">
             </div>
         </section>
     </main>
