--- a/web/index.html
+++ b/web/index.html
@@ -18,8 +18,8 @@
                 <li class="nav-item"><a href="#">About</a></li>
                 <li class="nav-item"><a href="#">Menu</a></li>
                 <li class="nav-item"><a href="#">Contact</a></li>
-                <li class="nav-item" id="nav__button-login"><a href="login.html">Login</a></li>
-                <li class="nav-item" id="nav__button-create"><a href="cadastro.html">Get Started</a></li>
+                <li class="nav-item" id="nav__button-login"><a href="views/login.html">Login</a></li>
+                <li class="nav-item" id="nav__button-create"><a href="views/cadastro.html">Get Started</a></li>
                 <i class='bx bx-search'></i>
             </ul>
             <div class="menu">
